# xlog

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Doxyfile.docs  JCODEMUNCH.md  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  index.md  kernels  mkdocs.yml  release-plz.toml  search-shim.js
crates/pyxlog/: Cargo.toml  README.md  pyproject.toml
crates/pyxlog/src/: dlpack.rs  ilp.rs  ilp_exact.rs  ilp_gpu.rs  lib.rs  logic.rs  neural.rs  neural_registry.rs  program.rs  training.rs  types.rs
crates/xlog-cli/: Cargo.toml
crates/xlog-cli/src/: main.rs
crates/xlog-cli/tests/: explain_cli_tests.rs  generated_rule_diagnostics.rs  interactive_cli_tests.rs  prob_cli_tests.rs  run_cli_tests.rs
crates/xlog-core/: Cargo.toml
crates/xlog-core/src/: config.rs  error.rs  lib.rs  symbol.rs  traits.rs  types.rs
crates/xlog-cuda/: Cargo.toml  build.rs
crates/xlog-cuda-tests/: Cargo.toml
crates/xlog-cuda-tests/src/: lib.rs  properties.rs
crates/xlog-cuda-tests/tests/: category_isolation.rs  certification_suite.rs  certification_vram_snapshot_gate.rs  count_mask_device.rs  g38_mint11_vram.rs  ilp_coo_fill_from_mask.rs  ilp_csr_histogram.rs  ilp_reduce_sum.rs  properties.rs  quick_smoke.rs  require_cuda_guard.rs  test_factorized_delta_sparse_spike.rs  test_free_join_spike.rs  test_wcoj_4cycle_groupby_root_agg.rs  test_wcoj_4cycle_groupby_root_count.rs  test_wcoj_clique_groupby_root_count.rs  test_wcoj_groupby_root_agg.rs  test_wcoj_groupby_root_count.rs  test_wcoj_metadata.rs  test_wcoj_w34_fusion.rs
crates/xlog-cuda/examples/: comprehensive_test.rs
crates/xlog-cuda/kernels/: .gitignore  CMakeLists.txt  arith.cu  cnf.cu  d4.cu  dedup.cu  epistemic.cu  filter.cu  groupby.cu  ilp.cu  ilp_exact.cu  join.cu  mc_eval.cu  mc_resident.cu  mc_sample.cu  neural.cu  pack.cu  pir.cu  sat.cu  scan.cu  sort.cu  totalorder.cuh  wcoj.cu  weights.cu
crates/xlog-cuda/src/: arrow_device.rs  cuda_compat.rs  cuda_graph.rs  device.rs  device_pool.rs  dlpack.rs  error_helpers.rs  kernel_manifest_data.rs  kernels.rs  launch.rs  lib.rs  memory.rs  multi_gpu_memory.rs  provider.rs  type_seam.rs  wcoj_metadata.rs  wcoj_phase_timing.rs
crates/xlog-cuda/tests/: arrow_device_ffi.rs  arrow_device_import.rs  arrow_tests.rs  build_script_tests.rs  compact_device_count.rs  d4_provider_tests.rs  decision_dnnf_provider_tests.rs  device_row_counts.rs  device_runtime_singleton.rs  dlpack_tests.rs  filter_tests.rs  groupby_gpu.rs  groupby_tests.rs  ilp_kernel_tests.rs  join_collision_test.rs  join_v2_tests.rs  large_prefix_sum_test.rs  multi_gpu_tests.rs  pack_keys_gpu.rs  pir_provider_tests.rs  ptx_validation.rs  runtime_cold_race.rs  scan_tests.rs  set_ops_tests.rs  sort_tests.rs  test_async_reap_race.rs  test_budget_via_runtime.rs  test_compute_ranks_tail_block_oob.rs  test_csm_env_dispatch.rs  test_d2h_counter.rs  test_deterministic_d2h_gate.rs  test_full_row_set_algebra.rs  test_join_pipeline_invariants.rs  test_join_zero_d2h.rs  test_logging_via_runtime.rs  test_membership_mask.rs  test_mt_sort_hj_alloc_ordering.rs  test_provider_launch_recorder.rs  test_provider_runtime_routing.rs  test_provider_with_runtime.rs  (+34 more)
crates/xlog-gpu/: Cargo.toml
crates/xlog-gpu-py/: Cargo.toml  pyproject.toml
crates/xlog-gpu-py/src/: lib.rs
crates/xlog-gpu/benches/: logic_bench.rs
crates/xlog-gpu/src/: biokg.rs  lib.rs  logic.rs
crates/xlog-gpu/tests/: biokg_streaming_relation_loader.rs  logic_runner.rs  relation_delta_planner_telemetry.rs  v032_gpu_certification.rs  v085_lists.rs  v085_meta.rs
crates/xlog-induce/: Cargo.toml
crates/xlog-induce/src/: index.rs  lib.rs  provenance.rs  reduce.rs  score.rs  types.rs  validate.rs
crates/xlog-induce/tests/: rule_induction_provenance.rs
crates/xlog-integration/: Cargo.toml
crates/xlog-integration/benches/: nested_loop_production_bench.rs  skewed_multiway_bench.rs  sort_merge_production_bench.rs  w42_production_nested_loop_bench.rs  w43_production_sort_merge_bench.rs  w52_skewed_multiway_bench.rs  wcoj_4cycle_bench.rs  wcoj_fusion_bench.rs  wcoj_histogram_guided_superhub.rs  wcoj_paper_class.rs  wcoj_triangle_bench.rs  wcoj_w33_superhub.rs  wcoj_w37_helper_split.rs  wcoj_w38_stream_mux.rs
crates/xlog-integration/src/: lib.rs  wcoj_dispatch.rs
crates/xlog-integration/tests/: e2e_integration_tests.rs  executor_config_tests.rs  ilp_integration_tests.rs  real_world_tests.rs  require_cuda_guard.rs  test_a3_a4_stress.rs  test_chain_promoter_dispatch.rs  test_cross_mode_determinism.rs  test_deep_recursive_wcoj.rs  test_epistemic_gpu_wcoj_execution.rs  test_external_consumer_analog_fixture.rs  test_external_consumer_surface_preservation.rs  test_factorized_delta_e2e.rs  test_factorized_delta_spike.rs  test_free_join_e2e.rs  test_heat_selectivity.rs  test_kclique_measurement_pilot.rs  test_m37a_surface_preservation.rs  test_multiway_walker_contract.rs  test_nested_loop_dispatch.rs  test_recursive_setop_profile.rs  test_same_generation_gpu.rs  test_selectivity_pass_reordering.rs  test_skewed_multiway_gpu.rs  test_sort_labels.rs  test_sort_merge_dispatch.rs  test_variable_ordering.rs  test_w21_variable_ordering.rs  test_w26_heat_selectivity.rs  test_w39_dts_dlm_analog_fixture.rs  test_w43_sort_merge_dispatch.rs  (+29 more)
crates/xlog-ir/: Cargo.toml
crates/xlog-logic/: Cargo.toml
crates/xlog-neural/: Cargo.toml
crates/xlog-prob/: Cargo.toml  build.rs
crates/xlog-runtime/: Cargo.toml
crates/xlog-solve/: Cargo.toml
crates/xlog-stats/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_parser.rs  fuzz_type_inference.rs
kernels/: .gitignore  CMakeLists.txt  arith.cu  arith.ptx  cache.cu  cache.ptx  circuit.cu  circuit.ptx  cnf.cu  cnf.ptx  d4.cu  d4.ptx  dedup.cu  dedup.ptx  filter.cu  filter.ptx  groupby.cu  groupby.ptx  ilp.cu  ilp_credit.cu  join.cu  join.ptx  mc_eval.cu  mc_eval.ptx  mc_sample.cu  mc_sample.ptx  neural.ptx  pack.cu  pack.ptx  pir.cu  pir.ptx  sat.cu  sat.ptx  scan.cu  scan.ptx  set_ops.cu  set_ops.ptx  sort.cu  sort.ptx  weights.cu  (+1 more)
(+2238 files in other folders)
