[workspace]
resolver = "2"
members = [
    "crates/xlog-core",
    "crates/xlog-ir",
    "crates/xlog-cuda",
    "crates/xlog-runtime",
    "crates/xlog-logic",
    "crates/xlog-prob",
    "crates/xlog-gpu",
    "crates/pyxlog",
    "crates/xlog-stats",
    "crates/xlog-solve",
    "crates/xlog-cuda-tests",
    "crates/xlog-cli",
    "crates/xlog-neural",
]

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xlog-project/xlog"

[workspace.dependencies]
thiserror = "1.0"
cudarc = { version = "0.12", features = ["cuda-12060"] }
pest = "2.7"
pest_derive = "2.7"
pyo3 = { version = "0.21.2" }
