[workspace]
resolver = "2"
members = [
    "crates/xlog-core",
    "crates/xlog-ir",
    "crates/xlog-cuda",
    "crates/xlog-runtime",
    "crates/xlog-logic",
    "crates/xlog-prob",
    "crates/xlog-gpu",
    "crates/pyxlog",
    "crates/xlog-stats",
    "crates/xlog-solve",
    "crates/xlog-cuda-tests",
    "crates/xlog-integration",
    "crates/xlog-cli",
    "crates/xlog-neural",
    "crates/xlog-induce",
]

[workspace.package]
version = "0.9.0-rc"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BrainyBlaze/xlog"
homepage = "https://github.com/BrainyBlaze/xlog"
keywords = ["xlog", "datalog", "gpu", "cuda"]

[workspace.dependencies]
thiserror = "1.0"
cudarc = { version = "0.19.4", features = ["cuda-13010"] }
pest = "2.7"
pest_derive = "2.7"
pyo3 = { version = "0.28.3" }
xlog-cli = { version = "0.9.0-rc", path = "crates/xlog-cli" }
xlog-core = { version = "0.9.0-rc", path = "crates/xlog-core" }
xlog-cuda = { version = "0.9.0-rc", path = "crates/xlog-cuda" }
xlog-gpu = { version = "0.9.0-rc", path = "crates/xlog-gpu" }
xlog-induce = { version = "0.9.0-rc", path = "crates/xlog-induce" }
xlog-ir = { version = "0.9.0-rc", path = "crates/xlog-ir" }
xlog-logic = { version = "0.9.0-rc", path = "crates/xlog-logic" }
xlog-neural = { version = "0.9.0-rc", path = "crates/xlog-neural" }
xlog-prob = { version = "0.9.0-rc", path = "crates/xlog-prob" }
xlog-runtime = { version = "0.9.0-rc", path = "crates/xlog-runtime" }
xlog-solve = { version = "0.9.0-rc", path = "crates/xlog-solve" }
xlog-stats = { version = "0.9.0-rc", path = "crates/xlog-stats" }

[profile.dev]
incremental = false

[profile.test]
incremental = false
