[package]
name = "pyxlog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for the XLOG probabilistic logic engine"
readme = "../../README.md"
keywords = ["logic", "probabilistic", "python", "pyo3", "gpu"]
categories = ["science", "api-bindings"]

[lib]
name = "pyxlog"
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "multiple-pymethods"] }
cudarc = { workspace = true }
rand = "0.8"
xlog-core = { path = "../xlog-core" }
xlog-cuda = { path = "../xlog-cuda" }
xlog-gpu = { path = "../xlog-gpu" }
xlog-prob = { path = "../xlog-prob" }
xlog-logic = { path = "../xlog-logic" }
xlog-neural = { path = "../xlog-neural", features = ["python"] }
xlog-runtime = { path = "../xlog-runtime" }
xlog-ir = { path = "../xlog-ir" }

[features]
default = ["host-io"]
host-io = ["xlog-prob/host-io"]
arrow-device-import = ["xlog-cuda/arrow-device-import"]
