[package]
name = "pyxlog"
version.workspace = true
edition.workspace = true

[lib]
name = "pyxlog"
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "multiple-pymethods"] }
cudarc = { workspace = true }
rand = "0.8"
xlog-core = { path = "../xlog-core" }
xlog-cuda = { path = "../xlog-cuda" }
xlog-gpu = { path = "../xlog-gpu" }
xlog-prob = { path = "../xlog-prob" }
xlog-logic = { path = "../xlog-logic" }
xlog-neural = { path = "../xlog-neural", features = ["python"] }
xlog-runtime = { path = "../xlog-runtime" }
xlog-ir = { path = "../xlog-ir" }
xlog-induce = { path = "../xlog-induce" }

[features]
default = ["host-io"]
host-io = ["xlog-prob/host-io"]
arrow-device-import = ["xlog-cuda/arrow-device-import"]
