[package]
name = "pyxlog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 extension crate backing the pyxlog Python package"
readme = "../../README.md"
publish = false

[lib]
name = "pyxlog"
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "multiple-pymethods"] }
cudarc = { workspace = true }
rand = "0.8"
xlog-core.workspace = true
xlog-cuda.workspace = true
xlog-gpu.workspace = true
xlog-prob.workspace = true
xlog-logic.workspace = true
xlog-neural = { workspace = true, features = ["python"] }
xlog-runtime.workspace = true
xlog-ir.workspace = true
xlog-induce.workspace = true

[features]
default = ["host-io"]
host-io = ["xlog-prob/host-io"]
arrow-device-import = ["xlog-cuda/arrow-device-import"]
