[build-system]
requires = ["maturin>=1.12.1"]
build-backend = "maturin"

[project]
name = "pyxlog"
version = "0.5.0"
description = "GPU-accelerated XLOG probabilistic logic programming (PyO3 bindings)"
requires-python = ">=3.8"
optional-dependencies = { test = ["scipy"] }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]

[tool.maturin]
python-source = "python"
module-name = "pyxlog._native"
features = ["pyo3/extension-module", "host-io"]
include = [
  { path = "*.portable.ptx", from = "out-dir", to = "pyxlog/kernels/", crate_name = "xlog-cuda" },
  { path = "*.cubin", from = "out-dir", to = "pyxlog/kernels/", crate_name = "xlog-cuda" },
]
