[build-system]
requires = ["maturin>=1.12.1"]
build-backend = "maturin"

[project]
name = "pyxlog"
dynamic = ["version"]
description = "GPU-accelerated XLOG probabilistic logic programming (PyO3 bindings)"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
optional-dependencies = { test = ["scipy"] }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/BrainyBlaze/xlog"
Repository = "https://github.com/BrainyBlaze/xlog"
Issues = "https://github.com/BrainyBlaze/xlog/issues"
Documentation = "https://github.com/BrainyBlaze/xlog/blob/main/docs/architecture/python-bindings.md"

[tool.maturin]
python-source = "python"
module-name = "pyxlog._native"
compatibility = "pypi"
features = ["pyo3/extension-module", "host-io"]
include = [
  { path = "pyxlog/kernels/*", format = "wheel" },
]
