[package]
name = "xlog-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Command-line interface for deterministic and probabilistic XLOG execution"
documentation = "https://docs.rs/xlog-cli"
readme = "../../README.md"

[[bin]]
name = "xlog"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
arrow = { version = "58", default-features = false, features = ["ffi", "ipc", "csv", "prettyprint"] }
thiserror.workspace = true
xlog-core.workspace = true
xlog-cuda.workspace = true
xlog-logic.workspace = true
xlog-gpu.workspace = true
xlog-prob.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
cudarc.workspace = true

[features]
default = []
host-io = ["xlog-prob/host-io"]
