[package]
name = "xlog-cli"
version.workspace = true
edition.workspace = true
default-run = "xlog"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Command-line interface for deterministic and probabilistic XLOG execution"
documentation = "https://docs.rs/xlog-cli"
readme = "../../README.md"

[[bin]]
name = "xlog"
path = "src/main.rs"

[[bin]]
name = "xlog-epistemic-evidence"
path = "src/bin/xlog-epistemic-evidence.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
arrow = { version = "59", default-features = false, features = ["ffi", "ipc", "csv", "prettyprint"] }
serde_json = "1"
thiserror.workspace = true
xlog-core.workspace = true
xlog-cuda.workspace = true
xlog-ir.workspace = true
xlog-logic.workspace = true
xlog-gpu.workspace = true
xlog-prob.workspace = true
xlog-runtime.workspace = true
xlog-solve.workspace = true
cudarc.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
cudarc.workspace = true

[features]
default = []
host-io = ["xlog-prob/host-io"]
