[package]
name = "xlog-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and error surfaces shared across XLOG"
readme = "../../README.md"

[dependencies]
thiserror.workspace = true
arrow = { version = "53", default-features = false, features = ["ffi"] }

[dev-dependencies]
serial_test = "3"
