[package]
name = "xlog-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Core types, traits, and error surfaces shared across XLOG"
documentation = "https://docs.rs/xlog-core"
readme = "../../README.md"

[dependencies]
thiserror.workspace = true
arrow = { version = "53", default-features = false, features = ["ffi"] }

[dev-dependencies]
serial_test = "3"
