[package]
name = "xlog-cuda-tests"
version = "0.2.0"
edition = "2021"
description = "Comprehensive CUDA/PTX kernel certification test suite"
publish = false

[dependencies]
xlog-cuda.workspace = true
xlog-core.workspace = true
xlog-solve.workspace = true
cudarc = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
fs2 = "0.4"

[dev-dependencies]
bytemuck = "1.14"
proptest = "1.4"

[[test]]
name = "certification_suite"
path = "tests/certification_suite.rs"
harness = true

[[test]]
name = "quick_smoke"
path = "tests/quick_smoke.rs"
harness = true

[[test]]
name = "category_isolation"
path = "tests/category_isolation.rs"
harness = true

[[test]]
name = "properties"
path = "tests/properties.rs"
harness = true

[[test]]
name = "count_mask_device"
path = "tests/count_mask_device.rs"
harness = true

[[test]]
name = "ilp_coo_fill_from_mask"
path = "tests/ilp_coo_fill_from_mask.rs"
harness = true

[[test]]
name = "ilp_csr_histogram"
path = "tests/ilp_csr_histogram.rs"
harness = true

[[test]]
name = "ilp_reduce_sum"
path = "tests/ilp_reduce_sum.rs"
harness = true
