[package]
name = "xlog-cuda-tests"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xlog-project/xlog"
description = "Comprehensive CUDA/PTX kernel certification test suite"
readme = "../../README.md"
publish = false

[dependencies]
xlog-cuda.workspace = true
xlog-core.workspace = true
xlog-logic.workspace = true
xlog-runtime.workspace = true
xlog-solve.workspace = true
cudarc = { workspace = true }
rand = "0.8"
rand_chacha = "0.9"
fs2 = "0.4"

[dev-dependencies]
proptest = "1.4"

[[test]]
name = "certification_suite"
path = "tests/certification_suite.rs"
harness = true

[[test]]
name = "g38_mint11_vram"
path = "tests/g38_mint11_vram.rs"
harness = true

[[test]]
name = "quick_smoke"
path = "tests/quick_smoke.rs"
harness = true

[[test]]
name = "category_isolation"
path = "tests/category_isolation.rs"
harness = true

[[test]]
name = "properties"
path = "tests/properties.rs"
harness = true

[[test]]
name = "count_mask_device"
path = "tests/count_mask_device.rs"
harness = true

[[test]]
name = "ilp_coo_fill_from_mask"
path = "tests/ilp_coo_fill_from_mask.rs"
harness = true

[[test]]
name = "ilp_csr_histogram"
path = "tests/ilp_csr_histogram.rs"
harness = true

[[test]]
name = "ilp_reduce_sum"
path = "tests/ilp_reduce_sum.rs"
harness = true
