[package]
name = "xlog-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "CUDA kernel provider, buffers, and interop for XLOG"
documentation = "https://docs.rs/xlog-cuda"
readme = "../../README.md"
include = [
    "src/**",
    "tests/**",
    "kernels/**",
    "examples/**",
    "build.rs",
    "../../README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]

[dependencies]
xlog-core.workspace = true
cudarc.workspace = true
arrow = { version = "53", default-features = false, features = ["ffi", "ipc"] }

[dev-dependencies]
bytemuck = "1.14"
# v0.6.2 plan→provider cert: tests that the pure-Rust hypergraph
# planner and the GPU WCOJ provider agree on the same fixture.
# Dev-only — no runtime coupling between xlog-cuda and xlog-logic.
xlog-logic.workspace = true

[features]
default = []
arrow-device-import = []
