[package]
name = "xlog-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "CUDA kernel provider, buffers, and interop for XLOG"
documentation = "https://docs.rs/xlog-cuda"
readme = "../../README.md"
include = [
    "src/**",
    "tests/**",
    "kernels/**",
    "examples/**",
    "build.rs",
    "../../README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]

[dependencies]
xlog-core.workspace = true
cudarc.workspace = true
arrow = { version = "53", default-features = false, features = ["ffi", "ipc"] }

[dev-dependencies]
bytemuck = "1.14"
# v0.6.2 plan→provider cert: tests that the pure-Rust hypergraph
# planner and the GPU WCOJ provider agree on the same fixture.
# Dev-only — no runtime coupling between xlog-cuda and xlog-logic.
# Path-only (no version): xlog-cuda publishes before xlog-logic in the
# crates.io dependency order, so a versioned dev-dep would make
# `cargo publish` for xlog-cuda demand an xlog-logic that isn't on the
# registry yet. cargo strips version-less dev-deps from the packaged
# manifest, breaking the publish-order cycle while keeping in-workspace tests.
xlog-logic = { path = "../xlog-logic" }

[features]
default = []
arrow-device-import = []
# Diagnostic-only: enable per-phase CUDA-event timing inside
# the WCOJ triangle dispatch. Production builds leave this off
# to keep the hot path zero-overhead. The phase-report binary
# in xlog-integration enables it for measurement runs only.
wcoj-phase-timing = []
