[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "xlog-gpu"
version = "0.2.0"
description = "GPU-accelerated XLOG (PyO3 bindings)"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]

[tool.maturin]
module-name = "xlog_gpu"
features = ["pyo3/extension-module"]
