[package]
name = "xlog-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU kernel orchestration for XLOG logic evaluation"
readme = "../../README.md"
keywords = ["logic", "probabilistic", "gpu", "cuda", "datalog"]
categories = ["science", "mathematics"]

[dependencies]
xlog-core = { path = "../xlog-core" }
xlog-cuda = { path = "../xlog-cuda" }
xlog-ir = { path = "../xlog-ir" }
xlog-logic = { path = "../xlog-logic" }
xlog-runtime = { path = "../xlog-runtime" }

[dev-dependencies]
criterion = "0.5"
serial_test = "3.0"

[[bench]]
name = "logic_bench"
harness = false
