[package]
name = "xlog-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "High-level Rust API for running XLOG programs on NVIDIA GPUs"
documentation = "https://docs.rs/xlog-gpu"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true
xlog-cuda.workspace = true
xlog-ir.workspace = true
xlog-logic.workspace = true
xlog-prob.workspace = true
xlog-runtime.workspace = true

[dev-dependencies]
criterion = "0.5"
serial_test = "3.0"

[[bench]]
name = "logic_bench"
harness = false
