[package]
name = "xlog-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Relational intermediate representation for XLOG query plans"
documentation = "https://docs.rs/xlog-ir"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true
