[package]
name = "xlog-logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser, compiler, and optimizer for XLOG logic programs"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true
xlog-ir.workspace = true
xlog-stats.workspace = true
pest.workspace = true
pest_derive.workspace = true

[dev-dependencies]
xlog-cuda.workspace = true
xlog-gpu.workspace = true
xlog-runtime.workspace = true
tempfile = "3"
serial_test = "3"
