[package]
name = "xlog-logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Parser, compiler, and optimizer for XLOG logic programs"
documentation = "https://docs.rs/xlog-logic"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true
xlog-ir.workspace = true
xlog-stats.workspace = true
pest.workspace = true
pest_derive.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test = "3"
