[package]
name = "xlog-neural"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Neural network integration for XLOG probabilistic logic"
readme = "../../README.md"
keywords = ["logic", "probabilistic", "neural", "deep-learning", "gpu"]
categories = ["science", "mathematics"]

[lib]
# `pyxlog` enables `pyo3/extension-module`, which makes Rust test binaries that link `pyo3` fail to
# link (they expect Python symbols to be provided by the embedding interpreter).
# XLOG's Python surface is validated via `python/tests/`, so we disable Rust unit/doctests here to
# keep `cargo test --workspace` green.
test = false
doctest = false

[features]
default = []
# Enable Python interop via PyO3 - use this when building with pyxlog
python = ["pyo3"]
# Enable Rust integration tests that exercise the PyO3 layer (run separately from workspace tests).
python-tests = ["python"]

[dependencies]
xlog-core = { path = "../xlog-core" }
thiserror = { workspace = true }
# PyO3 is optional - only needed when integrating with Python
pyo3 = { workspace = true, optional = true }

[dev-dependencies]

# All tests require the python feature to be enabled
[[test]]
name = "registry_test"
path = "tests/registry_test.rs"
required-features = ["python-tests"]

[[test]]
name = "tensor_source_test"
path = "tests/tensor_source_test.rs"
required-features = ["python-tests"]

[[test]]
name = "batch_test"
path = "tests/batch_test.rs"
required-features = ["python-tests"]

[[test]]
name = "bridge_test"
path = "tests/bridge_test.rs"
required-features = ["python-tests"]
