[package]
name = "xlog-prob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Probabilistic inference engine for XLOG"
readme = "../../README.md"
keywords = ["logic", "probabilistic", "inference", "datalog", "gpu"]
categories = ["science", "mathematics"]

[dependencies]
xlog-core = { path = "../xlog-core" }
xlog-logic = { path = "../xlog-logic" }
xlog-ir = { path = "../xlog-ir" }
xlog-cuda = { path = "../xlog-cuda" }
xlog-runtime = { path = "../xlog-runtime" }
xlog-solve = { path = "../xlog-solve" }
cudarc = { workspace = true }
bytemuck = "1"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
host-io = []

[[bench]]
name = "prob_bench"
harness = false
required-features = ["host-io"]
