[package]
name = "xlog-prob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Probabilistic inference engines for XLOG"
documentation = "https://docs.rs/xlog-prob"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true
xlog-logic.workspace = true
xlog-ir.workspace = true
xlog-cuda.workspace = true
xlog-runtime.workspace = true
xlog-solve.workspace = true
cudarc = { workspace = true }
bytemuck = "1"

[dev-dependencies]
criterion = "0.8"

[features]
default = []
host-io = []

[[bench]]
name = "prob_bench"
harness = false
required-features = ["host-io"]
