[package]
name = "xlog-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Runtime executor and relation store for XLOG"
documentation = "https://docs.rs/xlog-runtime"
readme = "../../README.md"

[dependencies]
cudarc = { workspace = true }
xlog-core.workspace = true
xlog-ir.workspace = true
xlog-cuda.workspace = true
xlog-stats.workspace = true

[dev-dependencies]
bytemuck = "1.14"
