[package]
name = "xlog-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Runtime executor and relation store for XLOG"
documentation = "https://docs.rs/xlog-runtime"
readme = "../../README.md"

[dependencies]
cudarc = { workspace = true }
xlog-core.workspace = true
xlog-ir.workspace = true
xlog-cuda.workspace = true
xlog-stats.workspace = true
xlog-logic = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = []
epistemic-logic-tests = ["dep:xlog-logic"]
# Diagnostic-only: per-phase timing of WCOJ triangle dispatch
# (classifier + 3 layouts + count/scan/total/materialize).
# Forwards to xlog-cuda's `wcoj-phase-timing` so the events
# inside the provider are recorded too. Off in production.
wcoj-phase-timing = ["xlog-cuda/wcoj-phase-timing"]
# Per-iteration recursive-SCC stats trace. Gates
# the trace types, the Executor field, the populating call
# sites in `execute_recursive_scc`, and the accessor. Default
# OFF — production builds carry zero trace overhead (no
# field, no work, no symbol). The recursive stats trace test
# `tests/recursive_stats_trace.rs` declares this feature
# in its `required-features`, so it is only compiled when
# the feature is enabled (e.g., `cargo test --features
# xlog-runtime/recursive-stats-trace` or `--all-features`).
recursive-stats-trace = ["dep:xlog-logic"]

# Recursive stats trace test target — only compiled when the
# `recursive-stats-trace` feature is enabled. Workspace
# command to run recursive stats trace tests:
#   cargo test --workspace --features xlog-runtime/recursive-stats-trace
[[test]]
name = "recursive_stats_trace"
path = "tests/recursive_stats_trace.rs"
required-features = ["recursive-stats-trace"]
