[package]
name = "xlog-solve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Solver services used by XLOG exact inference and verification layers"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true
xlog-cuda.workspace = true
cudarc.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "solver_bench"
harness = false
